# haskell_tutorial_cookbook_examples

./: .gitignore  .replit  Makefile  README.md  replit.nix
Blackjack/: Blackjack.cabal  Card.hs  LICENSE  Main.hs  README.md  RandomizedList.hs  Table.hs  stack.yaml
BraveSearch/: BraveSearch.hs  Main.hs  README.md  brave-search-client.cabal
ClientServer/: Client.hs  ClientServer.cabal  README.md  Server.hs  stack.yaml
CommandLineApp/: CommandLine1.hs  CommandLine2.hs  CommandLineApp.cabal  GameLoop1.hs  GameLoop2.hs  README.md  ReadTextFile.hs  ReadTextFileErrorHandling.hs  stack.yaml
Database-postgres/: README.md  TestDatabase.cabal  TestPostgres1.hs  stack.yaml
Database-sqlite/: README.md  TestDatabase.cabal  TestSqLite1.hs  stack.yaml
FastTag/: FastTag.cabal  LexiconData.hs  README.md  fasttag.hs  stack.yaml
HttpClient/: HttpClient.cabal  HttpClientExample.hs
HybridHaskellPythonCorefAnaphoraResolution/: .gitignore  HybridHaskellPythonCorefAnaphoraResolution.cabal  README.md  stack.yaml
HybridHaskellPythonCorefAnaphoraResolution/app/: Main.hs
HybridHaskellPythonCorefAnaphoraResolution/python_coreference_anaphora_resolution_server/: README.md
HybridHaskellPythonCorefAnaphoraResolution/src/: CorefWebClient.hs
HybridHaskellPythonNlp/: .gitignore  ChangeLog.md  LICENSE  README.md  stack.yaml
HybridHaskellPythonNlp/app/: Main.hs
HybridHaskellPythonNlp/python_spacy_nlp_server/: README.md
HybridHaskellPythonNlp/src/: NlpWebClient.hs
ImPure/: CommonWords.hs  DoLetExample.hs  DoLetExample2.hs  DoLetExample3.hs  FmapExample.hs  ImPure.cabal  README.md  stack.yaml  text1.txt  text2.txt
LinkedDataApp/: LICENSE  LinkedDataApp.cabal  README.md  TestLD.hs  stack.yaml
NlpDatabaseQuery/: Database metadata notes.md  LICENSE  MockupData.hs  Parser.hs  README.md  SQL notes.md  TestDb.hs  TestParser.cabal  TestParser.hs
NlpTool/: .gitignore  BroadcastNetworkNamesDbPedia.hs  Categorize.hs  Category2Gram.hs  Combo.hs  CompanyNames.hs  CompanyNamesDbpedia.hs  CountryNames.hs  CountryNamesDbpedia.hs  Entities.hs  FirstNames.hs  LICENSE  LastNames.hs  Makefile  NamePrefixes.hs  NlpTool.cabal  NlpTool.hs  PeopleDbPedia.hs  PoliticalPartyNamesDbPedia.hs  README.md  Sentence.hs  Stemmer.hs  Summarize.hs  Utils.hs  WebApp.hs  cabal.config  stack.yaml
NlpTool/app/: NlpTool.hs
NlpTool/src/nlp/: Categorize.hs  Entities.hs  NlpUtils.hs  Sentence.hs  Stemmer.hs  Summarize.hs
NlpTool/src/nlp/data/: Category1Gram.hs  CityNamesDbpedia.hs  TradeUnionNamesDbPedia.hs  UniversityNamesDbPedia.hs
OpenAiApiClient/: GenText.hs  OpenAiApiClient.cabal  README.md  stack.yaml
ProbabilisticGraphModel/: Dice.hs  README.md  Sprinkler.hs  StudentExample.hs  pgm.cabal  stack.yaml
Pure/: Cases.hs  ChainedCalls.hs  Conditionals.hs  Guards.hs  IfThenElses.hs  LetAndWhere.hs  MapExamples.hs  MyColors.hs  NoIO.hs  Pure.cabal  README.md  Simple.hs  colors.hs  myfunc1.hs
SparqlClient/: .gitignore  HttpSparqlClient.hs  HttpSparqlJsonClient.hs  JsonTest.hs  README.md  RobsExample.hs  SparqlClient.cabal  SparqlClient.hs  TestSparqlClient.hs  stack.yaml
StateMonad/: README.md  State1.hs  stack.yaml  statemonad.cabal
TestingHaskell/: README.md  TestingHaskell.cabal  stack.yaml
TestingHaskell/app/: Main.hs
TestingHaskell/src/: MyColors.hs
TestingHaskell/test/: Spec.hs
TextProcessing/: CleanText.hs  LICENSE  README.md  TestAESON.hs  TestCSV.hs  TestCleanText.hs  TestJSON.hs  TestTextJSON.hs  TextProcessing.cabal  stack.yaml  test.csv
Timers/: LICENSE  README.md  TImerTest.hs  Timers.cabal  stack.yaml
WebScraping/: AesonTest.hs  HandsomeSoupTest.hs  HttpClientExample.hs  LICENSE  README.md  TagSoupTest.hs  WebScraping.cabal  stack.yaml
debugging/: README.md  TraceTimerTest.hs  debugging.cabal  stack.yaml
gemini_commandline/: Main.hs  README.md  cabal.project.freeze  gemini.cabal
knowledge_graph_creator_pure/: .gitignore  KGCreator.cabal  LICENSE  Makefile  NEO4J_NOTES.md  README.md  TBD_FIX.md  stack.yaml
knowledge_graph_creator_pure/app/: Main.hs
knowledge_graph_creator_pure/dev/: Dev.hs  DevSummarize.hs
knowledge_graph_creator_pure/python_utils/: sparql_file_query_example.py
knowledge_graph_creator_pure/src/fileutils/: BlackBoard.hs  DirUtils.hs  FileUtils.hs
knowledge_graph_creator_pure/src/sw/: GenNeo4jCypher.hs  GenTriples.hs
knowledge_graph_creator_pure/src/toplevel/: Apis.hs
knowledge_graph_creator_pure/src/webclients/: ClassificationWebClient.hs  NlpWebClient.hs
knowledge_graph_creator_pure/test/: Spec.hs
ollama_commandline/: Main.hs  README.md  cabal.project.freeze  ollama-client.cabal
webchat/: README.md  cabal.project.freeze  gemini-chat.cabal  main.hs
