name:                Blackjack
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/mark-watson/CommandLineApp#readme
license:             BSD3
license-file:        LICENSE
author:              Mark Watson
maintainer:          markw@markwatson.com
copyright:           Copyright 2016 Mark Watson. All rights reserved
category:            dev
build-type:          Simple
cabal-version:       >=1.22.4.0

executable Blackjack
  hs-source-dirs:      .
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.8.2.0, containers, random, lens, array, MonadRandom
  other-modules:       Card, Table, RandomizedList
  
