name:                Blackjack
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/mark-watson/haskell_tutorial_cookbook_examples
license:             Apache-2.0
license-file:        APACHE LICENSE-2.0.txt (in parent directory)
author:              Mark Watson
maintainer:          markw@markwatson.com
copyright:           Copyright 2016 Mark Watson. All rights reserved
category:            dev
build-type:          Simple
cabal-version:       >=1.22.4.0

executable Blackjack
  hs-source-dirs:      .
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.8.2.0, containers, random, lens, array, MonadRandom
  other-modules:       Card, Table, RandomizedList
  
