name:                ClientServer
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/mark-watson/CommandLineApp#readme
license:             BSD3
license-file:        LICENSE
author:              Mark Watson
maintainer:          markw@markwatson.com
copyright:           Copyright 2016 Mark Watson. All rights reserved
category:            dev
build-type:          Simple
cabal-version:       >=1.22.4.0

executable Server
  hs-source-dirs:      .
  main-is:             Server.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, bytestring, network-simple
  
executable Client
  hs-source-dirs:      .
  main-is:             Client.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, bytestring, network-simple
