name:                CommandLineApp
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/mark-watson/CommandLineApp#readme
license:             BSD3
license-file:        LICENSE
author:              Mark Watson
maintainer:          markw@markwatson.com
copyright:           Copyright 2016 Mark Watson. All rights reserved
category:            dev
build-type:          Simple
cabal-version:       >=1.22.4.0

executable CommandLine1
  hs-source-dirs:      .
  main-is:             CommandLine1.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  
executable CommandLine2
  hs-source-dirs:      .
  main-is:             CommandLine2.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable ReadTextFile
  hs-source-dirs:      .
  main-is:             ReadTextFile.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable ReadTextFileErrorHandling
  hs-source-dirs:      .
  main-is:             ReadTextFile.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, mtl

executable GameLoop1
  hs-source-dirs:      .
  main-is:             GameLoop1.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, time

executable GameLoop2
  hs-source-dirs:      .
  main-is:             GameLoop2.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, random
