name:                ImPure
version:             0.1.0.0
synopsis:            ImPure
description:         Please see README.md
homepage:            https://github.com/mark-watson/haskell_tutorial_cookbook_examples
license:             Apache-2.0
license-file:        ../APACHE_LICENSE-2.0.txt
author:              Mark Watson
maintainer:          markw@markwatson.com
copyright:           Copyright 2016 Mark Watson. All rights reserved
category:            dev
build-type:          Simple
cabal-version:       >=1.22.4.0

executable DoLetExample
  hs-source-dirs:      .
  main-is:             DoLetExample.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable DoLetExample2
  hs-source-dirs:      .
  main-is:             DoLetExample2.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable DoLetExample3
  hs-source-dirs:      .
  main-is:             DoLetExample3.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable FmapExample
  hs-source-dirs:      .
  main-is:             FmapExample.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable CommonWords
  hs-source-dirs:      .
  main-is:             CommonWords.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, containers


