name:                LinkedDataApp
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/SparqlClient#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable TestLD
  hs-source-dirs:      . ../SparqlClient
  main-is:             TestLD.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, rdf4h, hsparql, text

