name:                NlpTool
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/mark-watson/HttpClient#readme
license:             Apache2
license-file:        LICENSE
author:              Mark Watson
maintainer:          markw@markwatson.com
copyright:           Copyright 2016 Mark Watson. All rights reserved
category:            dev
build-type:          Simple
cabal-version:       >=1.22.4.0

executable NlpTool
  ghc-options:
  hs-source-dirs:      .
  main-is:             NlpTool.hs
  build-depends:       base >= 4.8 && < 5,
                       containers, MissingH, json, split, HTTP, text, tagsoup
  default-language:    Haskell2010

