name:                SparqlClient
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/mark-watson/haskell_tutorial_cookbook_examples
license:             Apache-2.0
license-file:        ../APACHE_LICENSE-2.0.txt
author:              Mark watson
copyright:           2016 Mark Watson
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable TestSparqlClient
  hs-source-dirs:      .
  main-is:             TestSparqlClient.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, rdf4h >= 3.0.0, hsparql, text

executable RobsExample
  hs-source-dirs:      .
  main-is:             RobsExample.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, HTTP >= 4, rdf4h >= 3.0.0, hsparql, text

executable HttpSparqlClient
  hs-source-dirs:      .
  main-is:             HttpSparqlClient.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, HTTP >= 4, http-conduit, containers, hxt, HandsomeSoup, text, bytestring

executable HttpSparqlJsonClient
  hs-source-dirs:      .
  main-is:             HttpSparqlJsonClient.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, HTTP >= 4, http-conduit, containers, hxt, HandsomeSoup, text, bytestring, json >= 0.10, yaml, aeson

executable JsonTest
  hs-source-dirs:      .
  main-is:             JsonTest.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, HTTP >= 4, http-conduit, containers, hxt, HandsomeSoup, text, bytestring, json >= 0.10, yaml, aeson

