name:                statemonad
version:             0.1.0.0
synopsis:            state monad examples
description:         Please see README.md
homepage:            https://github.com/mark-watson/haskell_tutorial_cookbook_examples
license:             Apache-2.0
license-file:        APACHE LICENSE-2.0.txt (in parent directory)
author:              Mark Watson
maintainer:          markw@markwatson.com
copyright:           Copyright 2016 Mark Watson. All rights reserved
category:            dev
build-type:          Simple
cabal-version:       >=1.22.4.0

executable State1
  hs-source-dirs:      .
  main-is:             State1.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, mtl
