name:                TextProcessing
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/SparqlClient#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable TestCSV
  hs-source-dirs:      .
  main-is:             TestCSV.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, csv, either-unwrap

executable TestTextJSON
  hs-source-dirs:      .
  main-is:             TestTextJSON.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, json

executable TestAESON
  hs-source-dirs:      .
  main-is:             TestAESON.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, aeson


executable TestCleanText
  hs-source-dirs:      .
  main-is:             TestCleanText.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

