name:                TextProcessing
version:             0.1.0.0
synopsis:            text processing examples
description:         Please see README.md
homepage:            https://github.com/mark-watson/haskell_tutorial_cookbook_examples
license:             Apache-2.0
license-file:        ../APACHE_LICENSE-2.0.txt
author:              Mark watson
copyright:           2016 Mark Watson
category:            TextProcessing
build-type:          Simple
cabal-version:       >=1.10

executable TestCSV
  hs-source-dirs:      .
  main-is:             TestCSV.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, csv, either-unwrap >= 1.1

executable TestTextJSON
  hs-source-dirs:      .
  main-is:             TestTextJSON.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, json >= 0.10

executable TestAESON
  hs-source-dirs:      .
  main-is:             TestAESON.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, aeson


executable CleanText
  hs-source-dirs:      .
  main-is:             CleanText.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, split, text, MissingH
