name:                WebScraping
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/mark-watson/HttpClient#readme
license:             BSD3
license-file:        LICENSE
author:              Mark Watson
maintainer:          markw@markwatson.com
copyright:           Copyright 2016 Mark Watson. All rights reserved
category:            dev
build-type:          Simple
cabal-version:       >=1.22.4.0

executable HttpClientExample
  hs-source-dirs:      .
  main-is:             HttpClientExample.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, wreq, lens, bytestring,
                       hxt, json >= 0.10

executable HandsomeSoupTest
  hs-source-dirs:      .
  main-is:             HandsomeSoupTest.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, wreq, lens, bytestring,
                       HandsomeSoup, hxt, json >= 0.10
