name:                WebScraping
version:             0.1.0.0
synopsis:            web scraping examples
description:         Please see README.md
homepage:            https://github.com/mark-watson/haskell_tutorial_cookbook_examples
license:             Apache-2.0
license-file:        ../APACHE_LICENSE-2.0.txt
author:              Mark Watson
maintainer:          markw@markwatson.com
copyright:           Copyright 2015 Mark Watson. All rights reserved
category:            dev
build-type:          Simple
cabal-version:       >=1.22.4.0

executable HttpClientExample
  hs-source-dirs:      .
  main-is:             HttpClientExample.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, wreq, lens, bytestring,
                       hxt, json >= 0.10

executable HandsomeSoupTest
  hs-source-dirs:      .
  main-is:             HandsomeSoupTest.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, wreq, lens, bytestring,
                       HandsomeSoup, hxt, json >= 0.10
