name:                WebScraping
version:             0.1.0.0
synopsis:            web scraping examples
description:         Please see README.md
homepage:            https://github.com/mark-watson/haskell_tutorial_cookbook_examples
license:             Apache-2.0
license-file:        ../APACHE_LICENSE-2.0.txt
author:              Mark Watson
maintainer:          markw@markwatson.com
copyright:           Copyright 2015 Mark Watson. All rights reserved
category:            dev
build-type:          Simple
cabal-version:       >=1.22.4.0

executable TagSoupTest
  hs-source-dirs:      .
  main-is:             TagSoupTest.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, wreq, lens, bytestring,
                       json >= 0.10, text >=2.1, 
                       http-conduit >= 2.3.8.3, tagsoup >= 0.14.8
