name:                debugging
version:             0.1.0.0
synopsis:            debugging
description:         Please see README.md
homepage:            https://github.com/mark-watson/haskell_tutorial_cookbook_examples
license:             Apache-2.0
license-file:        ../APACHE_LICENSE-2.0.txt
author:              Mark Watson
maintainer:          markw@markwatson.com
copyright:           Copyright 2018 Mark Watson. All rights reserved
category:            dev
build-type:          Simple
cabal-version:       >=1.22.4.0

executable TraceTimerTest
  hs-source-dirs:      .
  main-is:             TraceTimerTest.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, time, timeit

