cabal-version: 1.12

name:           KGCreator
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/mark-watson/knowledge_graph_creator.hs#readme>
homepage:       https://github.com/mark-watson/haskell_tutorial_cookbook_examples
author:         Mark Watson
maintainer:     mark@markwatson.com
copyright:      2019 Mark Watson
license:        Apache-2.0
license-file:   ../APACHE_LICENSE-2.0.txt
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/githubuser/KGCreator

library
  exposed-modules:
      CorefWebClient
      NlpWebClient
      ClassificationWebClient
      DirUtils
      FileUtils
      BlackBoard
      GenTriples
      GenNeo4jCypher
      Apis
      Categorize
      NlpUtils
      Summarize
      Entities
  other-modules:
      Paths_KGCreator
      BroadcastNetworkNamesDbPedia
      Category1Gram
      Category2Gram
      CityNamesDbpedia
      CompanyNamesDbpedia
      CountryNamesDbpedia
      PeopleDbPedia
      PoliticalPartyNamesDbPedia
      Sentence
      Stemmer
      TradeUnionNamesDbPedia
      UniversityNamesDbPedia

  hs-source-dirs:
      src
      src/webclients
      src/fileutils
      src/sw
      src/toplevel
      ../NlpTool/src/nlp
      ../NlpTool/src/nlp/data

  build-depends:
      base >=4.7 && <5, wreq, lens, bytestring
    , hxt, json, uri-encode >= 1.5.0.5, MissingH
    , aeson >= 1.4.2.0, containers, split >= 0.2.3.3, text
    , directory, yaml, aeson, string-conversions
    , MissingH, sqlite-simple
  default-language: Haskell2010

executable KGCreator-exe
  main-is: Main.hs
  other-modules:
      Paths_KGCreator
  hs-source-dirs:
      app
      ../NlpTool/src/nlp
      ../NlpTool/src/nlp/data
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      KGCreator
    , base >=4.7 && <5
    , MissingH
    , directory, containers >= 0.6.0.1, split >= 0.2.3.3
  default-language: Haskell2010

